--- a/LBProfiler/app/src/main/res/layout/activity_place_selection.xml
+++ b/LBProfiler/app/src/main/res/layout/activity_place_selection.xml
@@ -17,6 +17,8 @@
         android:id="@+id/tvAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="84dp"
+        android:layout_marginTop="4dp"
         android:textSize="18sp" />
 
     <ProgressBar
@@ -28,5 +30,17 @@
         android:layout_below="@+id/tvAddress"
         android:layout_marginEnd="35dp"
         android:layout_marginTop="29dp" />
+
+    <Button
+        android:id="@+id/btnOk"
+        style="@style/Widget.AppCompat.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:background="@color/com_facebook_button_send_background_color"
+        android:text="OK"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
