--- a/LBProfiler/app/src/main/res/values/styles.xml
+++ b/LBProfiler/app/src/main/res/values/styles.xml
@@ -14,6 +14,14 @@
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="RatingBar" parent="AppTheme">
+        <item name="colorControlNormal">@color/starNormalColor</item>
+        <item name="colorControlActivated">@color/starNormalColor</item>
+    </style>
+    <style name="MyButton" parent="Theme.AppCompat.Light">
+        <item name="colorControlHighlight">@color/colorMediumPurple</item>
+        <item name="colorButtonNormal">@color/colorPurpleHeart</item>
+    </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
