--- a/LBProfiler/app/src/main/res/layout/activity_profile_creation.xml
+++ b/LBProfiler/app/src/main/res/layout/activity_profile_creation.xml
@@ -2,11 +2,11 @@
 
 
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#999"
+    android:background="@drawable/bgadd1"
     android:padding="16dp">
 
     <LinearLayout
@@ -18,11 +18,13 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="serif-monospace"
             android:text="Add Details For Profile Creation"
             android:textAlignment="center"
-            android:textAllCaps="true"
 
-            android:textSize="24sp"
+            android:textAllCaps="true"
+            android:textColor="?android:attr/editTextColor"
+            android:textSize="30sp"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp" />
@@ -107,13 +109,13 @@
 
         <SeekBar
             android:id="@+id/seekBar2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/editText"
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_marginTop="15dp"
             android:progress="60"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/editText"
             tools:layout_editor_absoluteX="157dp"
             tools:layout_editor_absoluteY="296dp" />
 
