--- a/LBProfiler/app/src/main/res/layout/activity_profile_modification.xml
+++ b/LBProfiler/app/src/main/res/layout/activity_profile_modification.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
+    android:background="@drawable/bgadd1"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context="trainedge.lbprofiler.ProfileCreation"
@@ -15,11 +15,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="serif-monospace"
         android:text="Modify Details Of Profile Created"
         android:textAlignment="center"
-        android:textAllCaps="true"
 
-        android:textSize="24sp"
+        android:textAllCaps="true"
+        android:textColor="?android:attr/editTextColor"
+        android:textSize="30sp"
         android:textStyle="bold"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
@@ -159,7 +161,7 @@
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="59dp"
 
         android:layout_marginTop="0dp"
         android:fontFamily="sans-serif-condensed"
