--- a/LBProfiler/app/src/main/res/layout/content_fragment_all_geofence.xml
+++ b/LBProfiler/app/src/main/res/layout/content_fragment_all_geofence.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="trainedge.sample_proj.Fragment_all_geofenceActivity"
+    tools:context="trainedge.lbprofiler.Fragment_all_geofenceActivity"
     tools:showIn="@layout/activity_fragment_all_geofence"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
