--- a/LBProfiler/app/src/main/res/layout/activity_profile_creation.xml
+++ b/LBProfiler/app/src/main/res/layout/activity_profile_creation.xml
@@ -40,7 +40,7 @@
             android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/etProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
@@ -63,7 +63,7 @@
             tools:layout_editor_absoluteY="184dp" />
 
         <EditText
-            android:id="@+id/editText4"
+            android:id="@+id/etGeofence"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
@@ -87,7 +87,7 @@
             tools:layout_editor_absoluteY="238dp" />
 
         <Spinner
-            android:id="@+id/spinner2"
+            android:id="@+id/spRing"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
@@ -108,7 +108,7 @@
             tools:layout_editor_absoluteY="296dp" />
 
         <SeekBar
-            android:id="@+id/seekBar2"
+            android:id="@+id/skVolume"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
@@ -131,7 +131,7 @@
             tools:layout_editor_absoluteY="351dp" />
 
         <Spinner
-            android:id="@+id/spinner3"
+            android:id="@+id/spMsgTone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
@@ -140,7 +140,7 @@
             tools:layout_editor_absoluteY="352dp" />
 
         <Switch
-            android:id="@+id/switch1"
+            android:id="@+id/sSilentMode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
@@ -151,7 +151,7 @@
             tools:layout_editor_absoluteY="433dp" />
 
         <Switch
-            android:id="@+id/switch2"
+            android:id="@+id/sVibration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
@@ -162,7 +162,7 @@
             tools:layout_editor_absoluteY="433dp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnCreate"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
