--- a/LBProfiler/app/src/main/res/layout/content_view_profile.xml
+++ b/LBProfiler/app/src/main/res/layout/content_view_profile.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bgadd1"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:padding="16dp">
 
     <LinearLayout
@@ -19,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="serif-monospace"
-            android:text="Add Details For Profile Creation"
+            android:text="Edit Details For Profile"
             android:textAlignment="center"
 
             android:textAllCaps="true"
@@ -30,7 +29,7 @@
             tools:layout_editor_absoluteY="0dp" />
 
         <TextView
-            android:id="@+id/tvAddress_Get"
+            android:id="@+id/tvAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -172,12 +171,10 @@
 
             android:layout_marginTop="0dp"
             android:fontFamily="sans-serif-condensed"
-            android:text="CREATE"
+            android:text="UPDATE"
             android:textSize="24sp"
             android:textStyle="italic"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="504dp" />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
-
-
