profile creation and updation possible

--- a/LBProfiler/app/src/main/res/layout/simple_profile_item.xml
+++ b/LBProfiler/app/src/main/res/layout/simple_profile_item.xml
@@ -36,7 +36,8 @@
             android:layout_alignStart="@+id/tvProfileName"
             android:layout_below="@+id/tvProfileName"
             android:layout_marginBottom="16dp"
-            android:text="active" />
+            android:text="active"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/tvView"
