background added to home activity

--- a/LBProfiler/app/src/main/res/layout/content_home.xml
+++ b/LBProfiler/app/src/main/res/layout/content_home.xml
@@ -12,5 +12,6 @@
         android:id="@+id/rvProfiles"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/bgrv1"
         tools:listitem="@layout/simple_profile_item" />
 </FrameLayout>
