--- a/LBProfiler/app/src/main/res/layout/simple_profile_item.xml
+++ b/LBProfiler/app/src/main/res/layout/simple_profile_item.xml
@@ -13,7 +13,8 @@
     <RelativeLayout
         android:id="@+id/rlContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="16dp">
 
         <TextView
             android:id="@+id/tvProfileName"
